fixed category list to be left aligned and fixed refresh bug with hash

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -109,6 +109,13 @@ body {
 .food {
   background-position:0px -225px!important;
 }
+.active-result.group-option{
+  text-align:left;
+}
+.group-result{
+  text-align:left;
+  font-size:14px;
+}
 #main{
   .home-page, .event-detail .appPromo {margin-bottom:70px;}
   .home-page, .event-detail, .business-detail, .error-page {
